--- a/docker/compose/radarr/compose.yaml
+++ b/docker/compose/radarr/compose.yaml
@@ -1,1 +1,20 @@
-g
+services:
+  radarr:
+    container_name: radarr
+    image: ghcr.io/hotio/radarr
+    networks:
+      - docker_default
+    ports:
+      - "7877:7878"
+    environment:
+      PUID: '1000'
+      PGID: '1000'
+      UMASK: '002'
+      TZ: 'Europe/Stockholm'
+    volumes:
+      - /opt/config/radarr:/config
+      - /mnt:/mnt
+
+networks:
+  docker_default:
+    external: true
