--- a/docker/compose/sonarr/compose.yaml
+++ b/docker/compose/sonarr/compose.yaml
@@ -1,1 +1,20 @@
-b
+services:
+  sonarr:
+    container_name: sonarr
+    image: ghcr.io/hotio/sonarr
+    networks:
+      - docker_default
+    ports:
+      - "8989:8989"
+    environment:
+      PUID: '1000'
+      PGID: '1000'
+      UMASK: '002'
+      TZ: 'Europe/Stockholm'
+    volumes:
+      - /opt/config/sonarr:/config
+      - /mnt:/mnt
+
+networks:
+  docker_default:
+    external: true
