--- a/docker/compose/sonarrhd/compose.yaml
+++ b/docker/compose/sonarrhd/compose.yaml
@@ -1,1 +1,20 @@
-q
+services:
+  sonarrhd:
+    container_name: sonarrhd
+    image: ghcr.io/hotio/sonarr
+    networks:
+      - docker_default
+    ports:
+      - "8988:8989"
+    environment:
+      PUID: '1000'
+      PGID: '1000'
+      UMASK: '002'
+      TZ: 'Europe/Stockholm'
+    volumes:
+      - /opt/config/sonarrhd:/config
+      - /mnt:/mnt
+
+networks:
+  docker_default:
+    external: true
