--- a/docker/compose/prowlarr-whisparr/compose.yaml
+++ b/docker/compose/prowlarr-whisparr/compose.yaml
@@ -7,12 +7,13 @@ services:
     ports:
       - "9695:9696"
     environment:
-      PUID: '1000'
-      PGID: '1000'
-      UMASK: '002'
-      TZ: 'Europe/Stockholm'
+      PUID: '$PUID'
+      PGID: '$PGID'
+      UMASK: '$UMASK'
+      TZ: '$TZ'
     volumes:
-      - /opt/config/prowlarr-whispar:/config
+      - '$WORKDIR/prowlarr-whispar:/config'
+      - '$DATADIR'
 
 networks:
   docker_default:
