--- a/docker/compose/prowlarr/compose.yaml
+++ b/docker/compose/prowlarr/compose.yaml
@@ -7,12 +7,13 @@ services:
     ports:
       - "9696:9696"
     environment:
-      PUID: '1000'
-      PGID: '1000'
-      UMASK: '002'
-      TZ: 'Europe/Stockholm'
+      PUID: '$PUID'
+      PGID: '$PGID'
+      UMASK: '$UMASK'
+      TZ: '$TZ'
     volumes:
-      - /opt/config/prowlarr:/config
+      - '$WORKDIR/prowlarr/config'
+      - '$DATADIR'
       - ./Custom:/config/Definitions/Custom
 
 networks:
