--- a/docker/compose/radarr/compose.yaml
+++ b/docker/compose/radarr/compose.yaml
@@ -7,13 +7,13 @@ services:
     ports:
       - "7877:7878"
     environment:
-      PUID: '1000'
-      PGID: '1000'
-      UMASK: '002'
-      TZ: 'Europe/Stockholm'
+      PUID: '$PUID'
+      PGID: '$PGID'
+      UMASK: '$UMASK'
+      TZ: '$TZ'
     volumes:
-      - /opt/config/radarr:/config
-      - /mnt:/mnt
+      - '$WORKDIR/radarr:/config'
+      - '$DATADIR'
 
 networks:
   docker_default:
