--- a/docker/compose/qbittorrent/compose.yaml
+++ b/docker/compose/qbittorrent/compose.yaml
@@ -3,15 +3,15 @@ services:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     environment:
-      PUID: '1000'
-      PGID: '1000'
-      UMASK: '002'
-      TZ: 'Europe/Stockholm'
+      PUID: '$PUID'
+      PGID: '$PGID'
+      UMASK: '$UMASK'
+      TZ: '$TZ'
       WEBUI_PORT: '8083'
       TORRENTING_PORT: '6881'
     volumes:
-      - /opt/config/qbittorrent:/config
-      - /mnt/storage/torrents:/downloads
+      - '$WORKDIR/qbittorrent:/config'
+      - '$DATADIR2/storage/torrents:/downloads'
     networks:
       - docker_default
     ports:
