--- a/docker/compose/rdtclient/compose.yaml
+++ b/docker/compose/rdtclient/compose.yaml
@@ -7,13 +7,13 @@
       - '6500:6500'
     hostname: rdtclient
     environment:
-      PUID: '1000'
-      PGID: '1000'
+      PUID: '$PUID'
+      PGID: '$PGID'
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /mnt:/mnt
-      - /opt/config/rdtclient/data:/data
-      - /opt/config/rdtclient/data/db:/data/db
+      - '$DATADIR'
+      - '$WORKDIR/rdtclient/data:/data'
+      - '$WORKDIR/rdtclient/data/db:/data/db'
     restart: unless-stopped
       
       
