--- a/dockerv2/files/traefik/1basic.yml
+++ b/dockerv2/files/traefik/1basic.yml
@@ -1,22 +1,24 @@
 services:
-  reverse-proxy:
-    # The official v3 Traefik docker image
-    image: traefik:v3.1
-    # Enables the web UI and tells Traefik to listen to docker
-    command: --api.insecure=true --providers.docker
+
+  traefik:
+    image: "traefik:v3.1"
+    container_name: "traefik"
+    command:
+      #- "--log.level=DEBUG"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entryPoints.web.address=:80"
     ports:
-      # The HTTP port
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
       - "8080:8080"
     volumes:
-      # So that Traefik can listen to the Docker events
-      - /var/run/docker.sock:/var/run/docker.sock
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   whoami:
-    # A container that exposes an API to show its IP address
-    image: traefik/whoami
+    image: "traefik/whoami"
+    container_name: "simple-service"
     labels:
-      - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
-
-# https://doc.traefik.io/traefik/getting-started/quick-start/
+      - "traefik.enable=true"
+      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
+      - "traefik.http.routers.whoami.entrypoints=web
