--- a/dockerv2/files/traefik/Test-01.yml
+++ b/dockerv2/files/traefik/Test-01.yml
@@ -1,1 +1,55 @@
+services:
+
+  traefik:
+    image: "traefik:v3.1"
+    container_name: "traefik"
+    command:
+      - --api.dashboard=true
+      - --log.level=INFO
+      - --api.insecure=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entryPoints.web.address=:80
+      - --entryPoints.websecure.address=:443
+      - --entrypoints.websecure.asDefault=true
+      - --entrypoints.websecure.http.tls.certresolver=myresolver
+      #- "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+      #- "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      #- "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+      - --certificatesresolvers.myresolver.acme.dnschallenge=true
+      - --certificatesresolvers.myresolver.acme.dnschallenge.provider=cloudflare
+      - --certificatesresolvers.myresolver.acme.email=tjelite1986@gmail.com
+      - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    environment:
+      - "CF_API_EMAIL=tjelite1986@gmail.com"
+      - "CF_API_KEY=5434e1246cb172fc18aef0b85bc0da148f92c"
+    volumes:
+      - "./letsencrypt:/letsencrypt"
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.mydashboard.rule=Host(`traefik.mecloud.win`)
+      - traefik.http.routers.mydashboard.service=api@internal
+      - traefik.http.routers.mydashboard.middlewares=myauth
+      - traefik.http.middlewares.myauth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
+  whoami:
+    image: "traefik/whoami"
+    container_name: "whoami"
+    labels:
+      - traefik.enable=true
+#      - traefik.http.routers.whoami.rule=Host(`whoami.mecloud.win`) || Host(`www.whoami.mecloud.win`)
+#      - traefik.http.services.whoami.loadbalancer.server.port=80
+#      - traefik.http.middlewares.wwwredirect.redirectregex.regex=^https://www\.(.*)
+#      - traefik.http.middlewares.mywwwredirect.redirectregex.replacement=https://$${1}
+#      - traefik.http.routers.whoami.middlewares=mywwwredirect
+      - traefik.http.routers.whoami.rule=Host(`whoami.mecloud.win`)
+      - traefik.http.routers.whoami.entrypoints=web
+      - traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls.certresolver=myresolver
 
