--- a/dockerv2/files/traefik/Test-01.yml
+++ b/dockerv2/files/traefik/Test-01.yml
@@ -19,7 +19,7 @@ services:
       - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
       - --certificatesresolvers.myresolver.acme.dnschallenge=true
       - --certificatesresolvers.myresolver.acme.dnschallenge.provider=cloudflare
-      - --certificatesresolvers.myresolver.acme.email=tjelite1986@gmail.com
+      - --certificatesresolvers.myresolver.acme.email=example@gmail.com
       - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
     ports:
       - "80:80"
@@ -33,21 +33,21 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     labels:
       - traefik.enable=true
-      - traefik.http.routers.mydashboard.rule=Host(`traefik.mecloud.win`)
+      - traefik.http.routers.mydashboard.rule=Host(`traefik.domain.com`)
       - traefik.http.routers.mydashboard.service=api@internal
       - traefik.http.routers.mydashboard.middlewares=myauth
-      - traefik.http.middlewares.myauth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
+      - traefik.http.middlewares.myauth.basicauth.users=jdkdkd:$$apr1$$jdkdkd$$IgXLP6ewTrSuBkTrqE8wj/
   whoami:
     image: "traefik/whoami"
     container_name: "whoami"
     labels:
       - traefik.enable=true
-#      - traefik.http.routers.whoami.rule=Host(`whoami.mecloud.win`) || Host(`www.whoami.mecloud.win`)
+#      - traefik.http.routers.whoami.rule=Host(`whoami.domain.com`) || Host(`www.whoami.doman.win`)
 #      - traefik.http.services.whoami.loadbalancer.server.port=80
 #      - traefik.http.middlewares.wwwredirect.redirectregex.regex=^https://www\.(.*)
 #      - traefik.http.middlewares.mywwwredirect.redirectregex.replacement=https://$${1}
 #      - traefik.http.routers.whoami.middlewares=mywwwredirect
-      - traefik.http.routers.whoami.rule=Host(`whoami.mecloud.win`)
+      - traefik.http.routers.whoami.rule=Host(`whoami.domaim.win`)
       - traefik.http.routers.whoami.entrypoints=web
       - traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)
       - traefik.http.routers.whoami.entrypoints=websecure
